# Canny_Edge_Detector

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp  utils.hpp
include/: converter.hpp  convolution.hpp  dev.hpp  image_io.hpp  image_processing.hpp  opencv_utils.hpp  ops.hpp  utils.hpp
python/: .gitignore  README.md  canny.py  sobel.py
